@@ -1,0 +1,4 @@
+# worthless comment so diff creates this file.
+# yay.
+# this will ultimately hold the 'preferred fetcher' in the transport namespace, 
+# along with default options for fetchers (chunk size fex)
